<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".ubicacion.UbicacionMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_asignacion_ubicaciones"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btnUbicacionInsertar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_asignar_nueva_ubicacion"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnUbicacionConsultar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_consultar_ubicacion"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnUbicacionActualizar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_actualizar_ubicacion"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnUbicacionEliminar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_eliminar_ubicacion"
        android:backgroundTint="#FF5252"
        android:textColor="#FFFFFF"/>

</LinearLayout>
