<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".importacion.ImportacionMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_gestion_importacion"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btnImportacionInsertar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_save"
        style="@style/AutoImportButton"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnImportacionConsultar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_search"
        style="@style/AutoImportButton"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnImportacionActualizar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_modificar"
        style="@style/AutoImportButton"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnImportacionEliminar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_delete"
        style="@style/AutoImportButton"
        android:textColor="#FFFFFF"/>

</LinearLayout>