<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    tools:context=".bodega.BodegaEliminarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_eliminar_bodega"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/editEliminarIdBodega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_id_bodega"
        android:inputType="number"
        android:layout_marginBottom="24dp"
        android:autofillHints="none"/>

    <Button
        android:id="@+id/btnEliminarBodega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:backgroundTint="#FF5252"
        android:textColor="#FFFFFF"/>

</LinearLayout>
